start major refactor

--- a/configs/local.yml
+++ b/configs/local.yml
@@ -5,7 +5,7 @@ api:
     User-Agent: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36"
 
 db:
-  host: 
+  host: mongodb+srv://malekc:mFOuaYb1K7uJvYrT@cluster0.blz3u.mongodb.net/
   database: vsa
   collections:
     vehicles: "vehicles"
@@ -23,3 +23,4 @@ selenium:
     - --no-sandbox
     - --disable-dev-shm-usage
     - --disable-gpu
+#    - --blink-settings=imagesEnabled=false
