--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-pydantic==2.10.4
-selenium==4.27.1
-requests==2.32.3
-scrapy==2.12.0
-tqdm==4.67.1
-pandas==2.2.3
+alembic==1.14.0
 backoff==2.2.1
+celery[redis]==5.5.3
+dependency-injector==4.48.2
+httpx==0.28.1
+pandas==2.2.3
 pyarrow==18.1.0
+pydantic==2.10.4
 pymongo==4.10.1
 python-dotenv==1.0.1
 pyyaml==6.0.2
-ruff==0.9.4
-selenium-stealth==1.0.6
 pytest==8.3.5
+requests==2.32.3
+ruff==0.9.4
+scrapy==2.12.0
+selenium==4.27.1
+selenium-stealth==1.0.6
 sqlalchemy==2.0.36
-alembic==1.14.0
+tqdm==4.67.1
