finished implementation of process_vehicle scraping task

--- a/infra/config/config.yml
+++ b/infra/config/config.yml
@@ -36,3 +36,8 @@ scrapers:
     min_req_delay: 1 # minimum delay before a request is made (in seconds)
     max_req_delay: 3 # maximum delay before a request is made (in seconds)
     timeout: 10 # how long to wait for a response (in seconds)
+  vehicle_scraper:
+    min_req_delay: 1 # minimum delay before a request is made (in seconds)
+    max_req_delay: 3 # maximum delay before a request is made (in seconds)
+    timeout: 10 # how long to wait for a response (in seconds)
+    reinit_session_every: 500
