--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "backoff>=2.2.1",
     "celery[redis]>=5.5.3",
     "dependency-injector>=4.48.2",
+    "fastapi>=0.115.0",
     "httpx>=0.28.1",
     "more-itertools>=10.5.0",
     "pandas>=2.2.3",
@@ -18,6 +19,7 @@ dependencies = [
     "selenium-stealth>=1.0.6",
     "sqlalchemy>=2.0.36",
     "tqdm>=4.67.1",
+    "uvicorn[standard]>=0.32.0",
 ]
 
 [project.optional-dependencies]
