--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   celery-worker:
     build: .
-    command: celery -A worker.main worker --loglevel=info --concurrency=2
+    command: celery -A worker.main worker --loglevel=info
     depends_on:
       redis:
         condition: service_healthy
@@ -21,7 +21,6 @@ services:
       - REDIS_URL=redis://redis:6379/0
       - CHROME_BINARY_PATH=/usr/bin/chromium
       - CHROMEDRIVER_PATH=/usr/bin/chromedriver
-      - CELERY_CONCURRENCY=2
     volumes:
       - ./app:/app/app
       - ./core:/app/core
