fix failing unit test; update pre-commit-config to run unit tests before commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,12 @@ repos:
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: mixed-line-ending
+
+  - repo: local
+    hooks:
+      - id: pytest-unit
+        name: Run unit tests
+        entry: uv run pytest -m unit tests/
+        language: system
+        pass_filenames: false
+        always_run: true
