--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "backoff>=2.2.1",
     "celery[redis]>=5.5.3",
     "dependency-injector>=4.48.2",
-    "fastapi>=0.115.0",
+    "fastapi>=0.115,<1",
     "httpx>=0.28.1",
     "more-itertools>=10.5.0",
     "pandas>=2.2.3",
@@ -17,9 +17,10 @@ dependencies = [
     "scrapy>=2.12.0",
     "selenium>=4.27.1",
     "selenium-stealth>=1.0.6",
-    "sqlalchemy>=2.0.36",
+    "sqlalchemy>=2.0.36,<3",
     "tqdm>=4.67.1",
-    "uvicorn[standard]>=0.32.0",
+    "uvicorn[standard]>=0.32.0,<1",
+    "pydantic-settings>=2.1,<3",
 ]
 
 [project.optional-dependencies]
