start adding airflow instead of celery and redis

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ DATABASE__ECHO=false
 # Webdriver
 WEBDRIVER__CHROME_BINARY_PATH=
 WEBDRIVER__CHROMEDRIVER_PATH=
+
+# Resources
+RESOURCES__BRANDS=resources/seeds/brands.csv
