--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "scrapy>=2.12.0",
     "selenium>=4.27.1",
     "selenium-stealth>=1.0.6",
-    "sqlalchemy>=2.0.36,<3",
+    "sqlalchemy<2.0",
     "tqdm>=4.67.1",
     "uvicorn[standard]>=0.32.0,<1",
     "pydantic-settings>=2.1,<3",
