--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "backoff>=2.2.1",
-    "celery[redis]>=5.5.3",
     "dependency-injector>=4.48.2",
-    "fastapi>=0.115,<1",
     "httpx>=0.28.1",
     "more-itertools>=10.5.0",
     "pandas>=2.2.3",
@@ -19,7 +17,6 @@ dependencies = [
     "selenium-stealth>=1.0.6",
     "sqlalchemy<2.0",
     "tqdm>=4.67.1",
-    "uvicorn[standard]>=0.32.0,<1",
     "pydantic-settings>=2.1,<3",
 ]
 
@@ -29,9 +26,6 @@ dev = [
     "pytest>=8.3.5",
     "ruff>=0.9.4",
 ]
-
-[project.scripts]
-carscout = "app.cli:main"
 
 [build-system]
 requires = ["hatchling"]
@@ -57,7 +51,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["app", "core", "infra", "scripts", "tasks"]
+known-first-party = ["app", "core", "infra", "examples"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -67,4 +61,4 @@ python_functions = ["test_*"]
 addopts = "-v --tb=short"
 
 [tool.hatch.build.targets.wheel]
-packages = ["app", "core", "infra", "scripts", "tasks"]
+packages = ["app", "core", "infra", "examples"]
