remove fernet key from docker-compose

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ WEBDRIVER__CHROMEDRIVER_PATH=
 
 # Resources
 RESOURCES__BRANDS=resources/seeds/brands.csv
+
+# Airflow
+AIRFLOW__CORE__FERNET_KEY=<FERNET_KEY>
