--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "scrapy>=2.12.0",
     "selenium>=4.27.1",
     "selenium-stealth>=1.0.6",
-    "sqlalchemy<2.0",
+    "sqlalchemy>=2.0",
     "tqdm>=4.67.1",
     "pydantic-settings>=2.1,<3",
 ]
