setup alembic infra

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DEBUG=true
 LOGGING__LOG_LEVEL=10
 
 # Database
-DATABASE__URL=sqlite:///data/carscout_251204.db
+DATABASE__URL=sqlite:///data/db/carscout.db
 DATABASE__ECHO=false
 
 # Webdriver
