--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "carscout-pipe"
-version = "0.1.3"
+version = "0.1.4"
 description = "Open-source scraping pipeline for olx.ba"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "alembic>=1.17.0",
     "backoff>=2.2.1",
     "dependency-injector>=4.48.2",
     "httpx>=0.28.1",
