--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sqlalchemy>=2.0",
     "tqdm>=4.67.1",
     "pydantic-settings>=2.1,<3",
+    "python-json-logger>=4.0.0",
 ]
 
 [project.optional-dependencies]
