--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "carscout-pipe"
-version = "0.1.4"
+version = "0.1.5"
 description = "Open-source scraping pipeline for olx.ba"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -20,6 +20,8 @@ dependencies = [
     "tqdm>=4.67.1",
     "pydantic-settings>=2.1,<3",
     "python-json-logger>=4.0.0",
+    "streamlit>=1.52.0",
+    "pyarrow>=22.0.0",
 ]
 
 [project.optional-dependencies]
